--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt": "~0.3.15"
+    "grunt": "~0.3.15",
+    "express":  "3.0.0rc5",
+    "policyfile":"0.0.5",
+    "socket.io": ">= 0.9.6",
+    "mongoose": "*"
   },
   "keywords": []
 }
