--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express":  "3.0.0rc5",
     "policyfile":"0.0.5",
     "socket.io": ">= 0.9.6",
+    "nconf":"0.6.4",
     "mongoose": "*"
   },
   "keywords": []
