--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "policyfile":"0.0.5",
     "socket.io": ">= 0.9.6",
     "nconf":"0.6.4",
-    "mongoose": "*"
+    "mongoose": "*",
+    "mongodb-wrapper":"0.4.0"
   },
   "keywords": []
 }
